--- a/StaffSignalIntegration/appsettings.json
+++ b/StaffSignalIntegration/appsettings.json
@@ -11,5 +11,11 @@
   },
   "StoredProcedureForEmployees": "[dbo].[GetActiveEmployees]",
   "StoredProcedureForClients": "[dbo].[GetClients]",
-  "StoredProcedureForAssignments": "[dbo].[GetAssigments]"
+  "StoredProcedureForAssignments": "[dbo].[GetAssigments]",
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "Enter the domain of your Azure AD tenant, e.g. 'contoso.onmicrosoft.com'",
+    "TenantId": "1e926dc4-7124-4820-b212-8d7b41fd1d81",
+    "ClientId": "3cf31cc0-64d7-43a2-a8e4-93502d1a4af4"
+  }
 }
